Fix alignment

--- a/resources/sass/_feed.scss
+++ b/resources/sass/_feed.scss
@@ -302,7 +302,7 @@ $feed-teal: #41b9aa;
 
     .copy-btn {
         position: absolute;
-        top: calc(100% - 60px);
+        top: calc(100% - 88px);
         left: calc(100% - 60px);
     }
 
